# cite-me-bro

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cite.bib
.github/: codecov.yml
.github/.github/ISSUE_TEMPLATE/: fmt_bug.yml  parsing_bug.yml
.github/ISSUE_TEMPLATE/: fmt_bug.yml  parsing_bug.yml  style_request.yml
.github/workflows/: check.yml  test.yml
examples/: Makefile.toml
examples/book/: book.toml
examples/mdbook/: book.toml  citations.bib
examples/mdbook/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  disclaimer.md  foreword.md
src/: cmb-bin.rs  lib.rs  main.rs  mdbook-bin.rs
src/formaters/: html.rs  markdown.rs  mod.rs  plain.rs
src/ops/: bibligraphy.rs  mod.rs  preprocessor.rs
src/parsing/: bibligraphy.rs  entry.rs  mod.rs  names.rs
src/styles/: apa.rs  ieee.rs  mod.rs
src/utils/: macros.rs
tests/: bin_test.rs  cmb_bin_test.rs  mdbook_bin_test.rs
