[package]
name = "cite-me-bro"
version = "0.1.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/savente93/cite-me-bro"
description = "Simple formatted citations over stdout right from your bib file."
keywords = ["academic", "citation", "references", "bibtex"]
categories = ["command-line-utilities", "parsing", "value-formatting"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "unicode"] }
lazy_static = "1.4.0"
mdbook = { version = "0.4.40", optional = true, default-features = false }
nom = { version = "7.1.3", features = ["alloc"] }
parse-hyperlinks = "0.27.2"
semver = { version = "1.0.23", optional = true, default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.118", optional = true, default-features = false }
unicode-segmentation = "1.11.0"

[features]
mdbook = ["dep:mdbook", "dep:semver", "dep:serde_json"]

[[bin]]
name = "cmb"
path = "src/cmb-bin.rs"

[[bin]]
name = "mdbook-citations"
path = "src/mdbook-bin.rs"
required-features = ["book"]
