[package]
name = "cite-me-bro"
version = "0.1.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/savente93/cite-me-bro"
description = "Simple formatted citations over stdout right from your bib file."
keywords = ["academic", "citation", "references", "bibtex"]
categories = ["command-line-utilities", "parsing", "value-formatting"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "unicode"] }
colog = "1.3.0"
colored = "2.1.0"
html-escape = "0.2.13"
lazy_static = "1.4.0"
log = "0.4.21"
nom = { version = "7.1.3", features = ["alloc"] }
parse-hyperlinks = "0.27.2"
serde = { version = "1.0.202", features = ["derive"] }
unicode-segmentation = "1.11.0"

[[bin]]
name = "cmb"
path = "src/bin/cmb.rs"
