[package]
name = "cite-me-bro"
version = "0.1.0"
edition = "2021"

license = "MIT"
repository = "https://github.com/savente93/cite-me-bro"
description = "Simple formatted citations over stdout right from your bib file."
keywords = ["academic", "citation", "references", "bibtex"]
categories = ["command-line-utilities", "parsing", "value-formatting"]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "unicode", "cargo"] }
env_logger = "0.11.3"
html-escape = "0.2.13"
lazy_static = "1.4.0"
log = { version = "0.4.22", features = ["std"] }
mdbook = { version = "0.4.40" }
nom = { version = "7.1.3", features = ["alloc"] }
parse-hyperlinks = "0.27.2"
semver = { version = "1.0.23" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.118" }
toml = "0.5.11"
unicode-segmentation = "1.11.0"


[lib]
name = "cite_me_bro"
path = "src/lib.rs"

[[bin]]
name = "cmb"
path = "src/bin/cmb.rs"

[[bin]]
name = "mdbook-citations"
path = "src/bin/mdbook-bin.rs"
